# data_structures_in_c

./: .gitignore  CMakeLists.txt
examples/: stack.c
include/: ds.h
lib/: data.h  stack.c  stack.h
